<resources>
    <string name="app_name">E-Commerce</string>
    <string name="Sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="courses">Courses</string>
    <string name="app">App</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="courseDesc">За программу вы изучите построение графических приложение под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложений и отлично изучите сам язык Джава!</string>
</resources>